crates/forge-frontend/src/parser_v1.rs
use chumsky::{
    input::{Stream, ValueInput},
    prelude::*,
};
use logos::Logos;

use crate::ast::*;
use crate::lexer::Token;

pub type CSpan = SimpleSpan<usize>;
type ParseExtra<'tokens> = extra::Err<Rich<'tokens, Token, CSpan>>;

#[derive(Debug, Clone, serde::Serialize)]
pub struct Diagnostic {
    pub span: Span,
    pub code: String,
    pub message: String,
}

#[derive(Debug, serde::Serialize)]
pub struct ParseOutput {
    pub ast: Option<SourceFile>,
    pub diagnostics: Vec<Diagnostic>,
}

fn span(value: CSpan) -> Span {
    Span::new(value.start, value.end)
}

fn diagnostic(span: Span, code: &str, message: impl Into<String>) -> Diagnostic {
    Diagnostic {
        span,
        code: code.into(),
        message: message.into(),
    }
}

fn closure_arrow_after_params(tokens: &[(Token, CSpan)], open_paren: usize) -> bool {
    let mut depth = 0usize;
    for (index, (token, _)) in tokens.iter().enumerate().skip(open_paren) {
        match token {
            Token::LParen => depth += 1,
            Token::RParen => {
                depth = depth.saturating_sub(1);
                if depth == 0 {
                    return matches!(tokens.get(index + 1), Some((Token::Arrow, _)));
                }
            }
            _ => {}
        }
    }
    false
}

fn declaration_terminator(tokens: &[(Token, CSpan)]) -> Option<usize> {
    let mut parentheses = 0usize;
    let mut brackets = 0usize;
    let mut braces = 0usize;
    for (index, (token, _)) in tokens.iter().enumerate() {
        match token {
            Token::LParen => parentheses += 1,
            Token::RParen => parentheses = parentheses.saturating_sub(1),
            Token::LBracket => brackets += 1,
            Token::RBracket => brackets = brackets.saturating_sub(1),
            Token::LBrace => braces += 1,
            Token::RBrace => braces = braces.saturating_sub(1),
            Token::Semicolon if parentheses == 0 && brackets == 0 && braces == 0 => {
                return Some(index);
            }
            _ => {}
        }
    }
    None
}

fn is_fdn_name_position(tokens: &[(Token, CSpan)], index: usize) -> bool {
    matches!(
        index
            .checked_sub(1)
            .and_then(|previous| tokens.get(previous)),
        Some((Token::Colon | Token::Slash | Token::Hash, _))
    )
}

fn reserved_syntax_diagnostics(tokens: &[(Token, CSpan)]) -> Vec<Diagnostic> {
    let mut diagnostics = Vec::new();

    for (index, (token, token_span)) in tokens.iter().enumerate() {
        match token {
            Token::Extern if !is_fdn_name_position(tokens, index) => {
                diagnostics.push(diagnostic(
                    span(*token_span),
                    "syntax/extern-deferred",
                    "`extern` declarations are reserved beyond Forge v1",
                ));
            }
            Token::SwitchReserved if !is_fdn_name_position(tokens, index) => {
                diagnostics.push(diagnostic(
                    span(*token_span),
                    "syntax/switch-removed",
                    "`switch` is not part of Forge v1; use `match`",
                ));
            }
            Token::InternalReserved if !is_fdn_name_position(tokens, index) => {
                diagnostics.push(diagnostic(
                    span(*token_span),
                    "syntax/internal-reserved",
                    "`internal` visibility is reserved beyond Forge v1",
                ));
            }
            Token::PlusEqReserved
            | Token::MinusEqReserved
            | Token::StarEqReserved
            | Token::SlashEqReserved
            | Token::PercentEqReserved
            | Token::AmpEqReserved
            | Token::PipeEqReserved
            | Token::CaretEqReserved
            | Token::ShiftLeftEqReserved
            | Token::ShiftRightEqReserved => {
                diagnostics.push(diagnostic(
                    span(*token_span),
                    "syntax/compound-assignment",
                    "compound assignment is not part of Forge v1",
                ));
            }
            Token::Ellipsis => {
                diagnostics.push(diagnostic(
                    span(*token_span),
                    "syntax/varargs-deferred",
                    "C varargs are reserved beyond Forge v1",
                ));
            }
            Token::At
                if matches!(
                    tokens.get(index + 1),
                    Some((Token::Ident(name), _)) if name == "check"
                ) && matches!(
                    index
                        .checked_sub(1)
                        .and_then(|previous| tokens.get(previous)),
                    Some((Token::Eq | Token::Return | Token::LParen | Token::Comma, _))
                ) =>
            {
                diagnostics.push(diagnostic(
                    span(*token_span),
                    "syntax/check-metadata-removed",
                    "expression-level `@check` is not part of Forge v1",
                ));
            }
            Token::At
                if matches!(
                    tokens.get(index + 1),
                    Some((Token::Ident(name), _)) if name == "wrap"
                ) && matches!(
                    index
                        .checked_sub(1)
                        .and_then(|previous| tokens.get(previous)),
                    Some((Token::Eq | Token::Return | Token::LParen | Token::Comma, _))
                ) =>
            {
                diagnostics.push(diagnostic(
                    span(*token_span),
                    "syntax/wrap-expression-removed",
                    "expression-level `@wrap` is not part of Forge v1",
                ));
            }
            Token::LBracket
                if matches!(tokens.get(index + 1), Some((Token::RBracket, _)))
                    && matches!(tokens.get(index + 2), Some((Token::LParen, _)))
                    && closure_arrow_after_params(tokens, index + 2) =>
            {
                let end = tokens[index + 1].1.end;
                diagnostics.push(diagnostic(
                    Span::new(token_span.start, end),
                    "syntax/empty-capture-list",
                    "capture-free closures omit the empty `[]` capture list",
                ));
            }
            Token::Val | Token::Var | Token::Const => {
                let declaration_tail = &tokens[index + 1..];
                let terminator = declaration_terminator(declaration_tail);
                if let Some(terminator) = terminator {
                    let declaration_tail = &declaration_tail[..terminator];
                    if !declaration_tail
                        .iter()
                        .any(|(candidate, _)| matches!(candidate, Token::Eq))
                        && !declaration_tail
                            .iter()
                            .any(|(candidate, _)| matches!(candidate, Token::In))
                    {
                        diagnostics.push(diagnostic(
                            span(*token_span),
                            "syntax/initializer-required",
                            "Forge v1 bindings require an initializer",
                        ));
                    }
                }
            }
            _ => {}
        }
    }

    diagnostics
}

fn ident<'tokens, I>() -> impl Parser<'tokens, I, String, ParseExtra<'tokens>> + Clone
where
    I: ValueInput<'tokens, Token = Token, Span = CSpan>,
{
    select! { Token::Ident(name) => name }
}

fn path<'tokens, I>() -> impl Parser<'tokens, I, Path, ParseExtra<'tokens>> + Clone
where
    I: ValueInput<'tokens, Token = Token, Span = CSpan>,
{
    ident()
        .separated_by(just(Token::Dot))
        .at_least(1)
        .collect::<Vec<_>>()
        .map(Path::new)
        .boxed()
}

fn fdn_word<'tokens, I>() -> impl Parser<'tokens, I, String, ParseExtra<'tokens>> + Clone
where
    I: ValueInput<'tokens, Token = Token, Span = CSpan>,
{
    select! {
        Token::Ident(name) => name,
        Token::Module => "module".to_owned(),
        Token::Import => "import".to_owned(),
        Token::Pub => "pub".to_owned(),
        Token::InternalReserved => "internal".to_owned(),
        Token::Fn => "fn".to_owned(),
        Token::Nfn => "nfn".to_owned(),
        Token::Struct => "struct".to_owned(),
        Token::Enum => "enum".to_owned(),
        Token::Tagged => "tagged".to_owned(),
        Token::BitStruct => "bitstruct".to_owned(),
        Token::Distinct => "distinct".to_owned(),
        Token::Type => "type".to_owned(),
        Token::Impl => "impl".to_owned(),
        Token::Extern => "extern".to_owned(),
        Token::Val => "val".to_owned(),
        Token::Var => "var".to_owned(),
        Token::Const => "const".to_owned(),
        Token::Return => "return".to_owned(),
        Token::Tail => "tail".to_owned(),
        Token::If => "if".to_owned(),
        Token::Else => "else".to_owned(),
        Token::While => "while".to_owned(),
        Token::For => "for".to_owned(),
        Token::In => "in".to_owned(),
        Token::Break => "break".to_owned(),
        Token::Continue => "continue".to_owned(),
        Token::Match => "match".to_owned(),
        Token::When => "when".to_owned(),
        Token::SwitchReserved => "switch".to_owned(),
        Token::Defer => "defer".to_owned(),
        Token::Unsafe => "unsafe".to_owned(),
        Token::With => "with".to_owned(),
        Token::Context => "context".to_owned(),
        Token::Select => "select".to_owned(),
        Token::Recv => "recv".to_owned(),
        Token::Timeout => "timeout".to_owned(),
        Token::Mut => "mut".to_owned(),
        Token::Volatile => "volatile".to_owned(),
        Token::None => "None".to_owned(),
        Token::Some => "Some".to_owned(),
        Token::Ok => "Ok".to_owned(),
        Token::Err => "Err".to_owned(),
        Token::Xor => "xor".to_owned(),
        Token::ResultType => "Result".to_owned(),
        Token::ClosureType => "closure".to_owned(),
    }
}

fn fdn_name<'tokens, I>() -> impl Parser<'tokens, I, String, ParseExtra<'tokens>> + Clone
where
    I: ValueInput<'tokens, Token = Token, Span = CSpan>,
{
    let separator = choice((just(Token::Slash).to('/'), just(Token::Dot).to('.')));
    fdn_word()
        .then(separator.then(fdn_word()).repeated().collect::<Vec<_>>())
        .map(|(first, rest)| {
            let mut name = first;
            for (separator, part) in rest {
                name.push(separator);
                name.push_str(&part);
            }
            name
        })
        .boxed()
}

fn source_parser<'tokens, I>() -> impl Parser<'tokens, I, SourceFile, ParseExtra<'tokens>> + Clone
where
    I: ValueInput<'tokens, Token = Token, Span = CSpan>,
{
    let mut fdn = Recursive::declare();
    let mut ty = Recursive::declare();
    let mut pattern = Recursive::declare();
    let mut expr = Recursive::declare();
    let mut stmt = Recursive::declare();

    // FDN embedded in metadata/reader forms.
    let fdn_scalar = choice((
        just(Token::True).to(FdnValue::Bool { value: true }),
        just(Token::False).to(FdnValue::Bool { value: false }),
        select! { Token::Integer(text) => FdnValue::Integer { text } },
        select! { Token::Float(text) => FdnValue::Float { text } },
        select! { Token::String(value) => FdnValue::String { value } },
        select! { Token::Character(value) => FdnValue::Character { value } },
        just(Token::Colon)
            .ignore_then(fdn_name())
            .map(|name| FdnValue::Keyword { name }),
        fdn_name().map(|name| {
            if name == "nil" {
                FdnValue::Nil
            } else {
                FdnValue::Symbol { name }
            }
        }),
    ))
    .boxed();

    let optional_comma = just(Token::Comma).or_not().ignored();
    let fdn_vector = fdn
        .clone()
        .then_ignore(optional_comma.clone())
        .repeated()
        .collect::<Vec<_>>()
        .delimited_by(just(Token::LBracket), just(Token::RBracket))
        .map(|values| FdnValue::Vector { values });
    let fdn_list = fdn
        .clone()
        .then_ignore(optional_comma.clone())
        .repeated()
        .collect::<Vec<_>>()
        .delimited_by(just(Token::LParen), just(Token::RParen))
        .map(|values| FdnValue::List { values });
    let fdn_map = fdn
        .clone()
        .then(fdn.clone())
        .map(|(key, value)| FdnMapEntry { key, value })
        .then_ignore(optional_comma.clone())
        .repeated()
        .collect::<Vec<_>>()
        .delimited_by(just(Token::LBrace), just(Token::RBrace))
        .map(|entries| FdnValue::Map { entries });
    let fdn_set = just(Token::Hash)
        .ignore_then(
            fdn.clone()
                .then_ignore(optional_comma.clone())
                .repeated()
                .collect::<Vec<_>>()
                .delimited_by(just(Token::LBrace), just(Token::RBrace)),
        )
        .map(|values| FdnValue::Set { values });
    let fdn_tagged = just(Token::Hash)
        .ignore_then(fdn_name())
        .then(fdn.clone())
        .map(|(tag, value)| FdnValue::Tagged {
            tag,
            value: Box::new(value),
        });
    fdn.define(
        choice((
            fdn_set, fdn_tagged, fdn_vector, fdn_list, fdn_map, fdn_scalar,
        ))
        .labelled("FDN value")
        .boxed(),
    );

    // Metadata.
    let metadata_named_arg = ident()
        .then_ignore(just(Token::Colon))
        .then(fdn.clone())
        .map(|(name, value)| MetadataArg::Named { name, value });
    let metadata_range_arg = fdn
        .clone()
        .then(choice((
            just(Token::DotDotEq).to(true),
            just(Token::DotDot).to(false),
        )))
        .then(fdn.clone())
        .map(|((start, inclusive), end)| MetadataArg::Range {
            start: Box::new(start),
            end: Box::new(end),
            inclusive,
        });
    let metadata_arg = choice((
        metadata_named_arg,
        metadata_range_arg,
        fdn.clone().map(MetadataArg::Value),
    ))
    .boxed();
    let named_metadata = just(Token::At)
        .ignore_then(ident())
        .then(
            metadata_arg
                .separated_by(just(Token::Comma))
                .allow_trailing()
                .collect::<Vec<_>>()
                .delimited_by(just(Token::LParen), just(Token::RParen))
                .or_not(),
        )
        .map(|(name, arguments)| Metadata {
            name: Some(name),
            arguments: arguments.unwrap_or_default(),
            map: None,
        });
    let structured_metadata = just(Token::At)
        .ignore_then(
            fdn.clone()
                .filter(|value| matches!(value, FdnValue::Map { .. })),
        )
        .map(|map| Metadata {
            name: None,
            arguments: Vec::new(),
            map: Some(map),
        });
    let metadata = choice((structured_metadata, named_metadata)).boxed();

    // Types.
    let named_type = path().map_with(|path, e| Node::new(TypeKind::Named { path }, span(e.span())));
    let result_type = just(Token::ResultType)
        .ignore_then(
            ty.clone()
                .then_ignore(just(Token::Comma))
                .then(ty.clone())
                .delimited_by(just(Token::LBracket), just(Token::RBracket)),
        )
        .map_with(|(ok, error), e| {
            Node::new(
                TypeKind::Result {
                    ok: Box::new(ok),
                    error: Box::new(error),
                },
                span(e.span()),
            )
        });
    let array_type = ty
        .clone()
        .then_ignore(just(Token::Semicolon))
        .then(expr.clone())
        .delimited_by(just(Token::LBracket), just(Token::RBracket))
        .map_with(|(element, length), e| {
            Node::new(
                TypeKind::Array {
                    element: Box::new(element),
                    length: Box::new(length),
                },
                span(e.span()),
            )
        });
    let callable_types = ty
        .clone()
        .separated_by(just(Token::Comma))
        .allow_trailing()
        .collect::<Vec<_>>()
        .delimited_by(just(Token::LParen), just(Token::RParen));
    let function_type = just(Token::Fn)
        .ignore_then(callable_types.clone())
        .then_ignore(just(Token::Arrow))
        .then(ty.clone())
        .map_with(|(params, result), e| {
            Node::new(
                TypeKind::Function {
                    params,
                    result: Box::new(result),
                },
                span(e.span()),
            )
        });
    let closure_type = just(Token::ClosureType)
        .ignore_then(callable_types)
        .then_ignore(just(Token::Arrow))
        .then(ty.clone())
        .map_with(|(params, result), e| {
            Node::new(
                TypeKind::Closure {
                    params,
                    result: Box::new(result),
                },
                span(e.span()),
            )
        });

    #[derive(Clone)]
    enum TypePrefix {
        Pointer(bool),
        Reference(bool),
    }
    let type_prefix = choice((
        just(Token::Star)
            .ignore_then(just(Token::Volatile).or_not())
            .map(|value| TypePrefix::Pointer(value.is_some())),
        just(Token::Amp)
            .ignore_then(just(Token::Mut).or_not())
            .map(|value| TypePrefix::Reference(value.is_some())),
    ));
    let type_base = choice((
        result_type,
        array_type,
        function_type,
        closure_type,
        named_type,
    ))
    .boxed();
    let prefixed_type = type_prefix
        .repeated()
        .foldr_with(type_base, |prefix, inner, e| {
            let kind = match prefix {
                TypePrefix::Pointer(volatile) => TypeKind::Pointer {
                    volatile,
                    inner: Box::new(inner),
                },
                TypePrefix::Reference(mutable) => TypeKind::Reference {
                    mutable,
                    inner: Box::new(inner),
                },
            };
            Node::new(kind, span(e.span()))
        });
    #[derive(Clone)]
    enum TypeSuffix {
        Optional,
        Slice(bool),
    }
    let type_suffix = choice((
        just(Token::Question).to(TypeSuffix::Optional),
        just(Token::LBracket)
            .ignore_then(just(Token::RBracket))
            .ignore_then(just(Token::Mut).or_not())
            .map(|mutable| TypeSuffix::Slice(mutable.is_some())),
    ));
    ty.define(
        prefixed_type
            .foldl_with(type_suffix.repeated(), |base, suffix, e| {
                let kind = match suffix {
                    TypeSuffix::Optional => TypeKind::Optional {
                        inner: Box::new(base),
                    },
                    TypeSuffix::Slice(mutable) => TypeKind::Slice {
                        mutable,
                        element: Box::new(base),
                    },
                };
                Node::new(kind, span(e.span()))
            })
            .labelled("type")
            .boxed(),
    );

    // Patterns.
    let signed_integer = just(Token::Minus)
        .ignore_then(select! { Token::Integer(text) => text })
        .map(|text| format!("-{text}"));
    let pattern_literal = choice((
        signed_integer.map(|text| PatternLiteral::Integer { text }),
        select! { Token::Integer(text) => PatternLiteral::Integer { text } },
        select! { Token::Character(value) => PatternLiteral::Character { value } },
        select! { Token::String(value) => PatternLiteral::String { value } },
        just(Token::True).to(PatternLiteral::Bool { value: true }),
        just(Token::False).to(PatternLiteral::Bool { value: false }),
    ))
    .boxed();
    let literal_pattern = pattern_literal
        .clone()
        .then(
            choice((
                just(Token::DotDotEq).to(true),
                just(Token::DotDot).to(false),
            ))
            .then(pattern_literal.clone())
            .or_not(),
        )
        .map_with(|(start, range), e| match range {
            Some((inclusive, end)) => Node::new(
                PatternKind::Range {
                    start,
                    end,
                    inclusive,
                },
                span(e.span()),
            ),
            None => Node::new(PatternKind::Literal { value: start }, span(e.span())),
        });
    let pattern_field = ident()
        .then(just(Token::Colon).ignore_then(pattern.clone()).or_not())
        .map(|(name, pattern)| PatternField { name, pattern });
    let pattern_fields = pattern_field
        .separated_by(just(Token::Comma))
        .allow_trailing()
        .collect::<Vec<_>>()
        .delimited_by(just(Token::LBrace), just(Token::RBrace));
    let variant_pattern = path()
        .then_ignore(just(Token::ColonColon))
        .then(ident())
        .then(pattern_fields.clone().or_not())
        .map_with(|((namespace, name), fields), e| {
            Node::new(
                PatternKind::Variant {
                    namespace,
                    name,
                    explicit_braces: fields.is_some(),
                    fields: fields.unwrap_or_default(),
                },
                span(e.span()),
            )
        });
    let struct_pattern = path()
        .then(pattern_fields.clone())
        .map_with(|(path, fields), e| {
            Node::new(PatternKind::Struct { path, fields }, span(e.span()))
        });
    let none_pattern = just(Token::None)
        .then(
            just(Token::LBrace)
                .ignore_then(just(Token::RBrace))
                .or_not(),
        )
        .map_with(|(_, braces), e| {
            Node::new(
                PatternKind::None {
                    explicit_braces: braces.is_some(),
                },
                span(e.span()),
            )
        });
    let some_pattern = just(Token::Some)
        .ignore_then(
            pattern
                .clone()
                .delimited_by(just(Token::LParen), just(Token::RParen)),
        )
        .map_with(|value, e| {
            Node::new(
                PatternKind::Some {
                    value: Box::new(value),
                },
                span(e.span()),
            )
        });
    let result_pattern = choice((just(Token::Ok), just(Token::Err)))
        .then(
            pattern
                .clone()
                .delimited_by(just(Token::LParen), just(Token::RParen)),
        )
        .map_with(|(tag, value), e| match tag {
            Token::Ok => Node::new(
                PatternKind::Ok {
                    value: Box::new(value),
                },
                span(e.span()),
            ),
            Token::Err => Node::new(
                PatternKind::Err {
                    value: Box::new(value),
                },
                span(e.span()),
            ),
            _ => unreachable!("result-pattern parser only produces Ok or Err"),
        });
    let sequence_rest = just(Token::DotDot)
        .ignore_then(ident().or_not())
        .map(|name| name.unwrap_or_default());
    let sequence_pattern = pattern
        .clone()
        .separated_by(just(Token::Comma))
        .collect::<Vec<_>>()
        .then(
            just(Token::Comma)
                .or_not()
                .ignore_then(sequence_rest)
                .or_not(),
        )
        .delimited_by(just(Token::LBracket), just(Token::RBracket))
        .map_with(|(items, rest), e| {
            Node::new(PatternKind::Sequence { items, rest }, span(e.span()))
        });
    let map_entry = just(Token::Colon)
        .ignore_then(fdn_name())
        .then(ident())
        .then(just(Token::Question).or_not())
        .map(|((keyword, binding), optional)| MapPatternEntry {
            keyword,
            binding,
            optional: optional.is_some(),
        });
    let map_pattern = map_entry
        .separated_by(just(Token::Comma))
        .collect::<Vec<_>>()
        .then(
            just(Token::Comma)
                .or_not()
                .ignore_then(just(Token::DotDot))
                .or_not(),
        )
        .delimited_by(just(Token::LBrace), just(Token::RBrace))
        .map_with(|(entries, rest), e| {
            Node::new(
                PatternKind::Map {
                    entries,
                    ignore_rest: rest.is_some(),
                },
                span(e.span()),
            )
        });
    let wildcard =
        just(Token::Underscore).map_with(|_, e| Node::new(PatternKind::Wildcard, span(e.span())));
    let binding = ident().map_with(|name, e| {
        Node::new(
            PatternKind::Binding {
                name,
                optional: false,
            },
            span(e.span()),
        )
    });
    let base_pattern = choice((
        variant_pattern,
        none_pattern,
        some_pattern,
        result_pattern,
        struct_pattern,
        sequence_pattern,
        map_pattern,
        literal_pattern,
        wildcard,
        binding,
    ))
    .boxed();
    let as_pattern = ident()
        .then_ignore(just(Token::At))
        .then(base_pattern.clone())
        .map_with(|(name, pattern), e| {
            Node::new(
                PatternKind::As {
                    name,
                    pattern: Box::new(pattern),
                },
                span(e.span()),
            )
        })
        .or(base_pattern)
        .boxed();
    pattern.define(
        as_pattern
            .clone()
            .separated_by(just(Token::Pipe))
            .at_least(1)
            .collect::<Vec<_>>()
            .map_with(|patterns, e| {
                if patterns.len() == 1 {
                    patterns.into_iter().next().expect("one pattern")
                } else {
                    Node::new(PatternKind::Or { patterns }, span(e.span()))
                }
            })
            .labelled("pattern")
            .boxed(),
    );

    // Blocks can refer to the declared statement parser before it is defined.
    let block = stmt
        .clone()
        .repeated()
        .collect::<Vec<_>>()
        .delimited_by(just(Token::LBrace), just(Token::RBrace))
        .map_with(|statements, e| Block {
            span: span(e.span()),
            statements,
        })
        .boxed();

    // Expressions.
    let literal_expr = select! {
        Token::Integer(text) => ExprKind::Integer { text },
        Token::Float(text) => ExprKind::Float { text },
        Token::Character(value) => ExprKind::Character { value },
        Token::String(value) => ExprKind::String { value },
        Token::CString(value) => ExprKind::CString { value },
        Token::True => ExprKind::Bool { value: true },
        Token::False => ExprKind::Bool { value: false },
    }
    .map_with(|kind, e| Node::new(kind, span(e.span())));
    let none_expr = just(Token::None)
        .then(
            just(Token::LBrace)
                .ignore_then(just(Token::RBrace))
                .or_not(),
        )
        .map_with(|_, e| Node::new(ExprKind::None, span(e.span())));
    let some_expr = just(Token::Some).map_with(|_, e| {
        Node::new(
            ExprKind::Path {
                path: Path::new(vec!["Some".into()]),
            },
            span(e.span()),
        )
    });
    let result_expr = choice((just(Token::Ok), just(Token::Err))).map_with(|token, e| {
        let name = match token {
            Token::Ok => "Ok",
            Token::Err => "Err",
            _ => unreachable!("result-expression parser only produces Ok or Err"),
        };
        Node::new(
            ExprKind::Path {
                path: Path::new(vec![name.into()]),
            },
            span(e.span()),
        )
    });
    let keyword_expr = just(Token::Colon)
        .ignore_then(fdn_name())
        .map_with(|name, e| Node::new(ExprKind::Keyword { name }, span(e.span())));
    let reader_expr = just(Token::Hash)
        .ignore_then(fdn_name())
        .then(fdn.clone())
        .map_with(|(tag, value), e| Node::new(ExprKind::ReaderForm { tag, value }, span(e.span())));
    let init_field = ident()
        .then_ignore(just(Token::Colon))
        .then(expr.clone())
        .map(|(name, value)| InitField { name, value });
    let struct_init = path()
        .then(just(Token::ColonColon).ignore_then(ident()).or_not())
        .then(
            init_field
                .separated_by(just(Token::Comma))
                .allow_trailing()
                .collect::<Vec<_>>()
                .delimited_by(just(Token::LBrace), just(Token::RBrace)),
        )
        .map_with(|((namespace, variant), fields), e| {
            Node::new(
                ExprKind::StructInit {
                    namespace,
                    variant,
                    fields,
                    explicit_braces: true,
                },
                span(e.span()),
            )
        });
    let qualified_expr = path()
        .then_ignore(just(Token::ColonColon))
        .then(ident())
        .map_with(|(namespace, name), e| {
            Node::new(ExprKind::Qualified { namespace, name }, span(e.span()))
        });
    let path_expr = ident().map_with(|name, e| {
        Node::new(
            ExprKind::Path {
                path: Path::new(vec![name]),
            },
            span(e.span()),
        )
    });
    let array_expr = expr
        .clone()
        .separated_by(just(Token::Comma))
        .allow_trailing()
        .collect::<Vec<_>>()
        .delimited_by(just(Token::LBracket), just(Token::RBracket))
        .map_with(|items, e| Node::new(ExprKind::Array { items }, span(e.span())));

    let closure_param = ident()
        .then_ignore(just(Token::Colon))
        .then(ty.clone())
        .map(|(name, ty)| Param {
            name,
            ty,
            default: None,
        });
    let closure_params = closure_param
        .separated_by(just(Token::Comma))
        .allow_trailing()
        .collect::<Vec<_>>()
        .delimited_by(just(Token::LParen), just(Token::RParen));
    let capture = choice((
        just(Token::Amp)
            .ignore_then(just(Token::Mut).or_not())
            .then(ident())
            .map(|(mutable, name)| Capture {
                name,
                by_reference: true,
                mutable: mutable.is_some(),
            }),
        ident().map(|name| Capture {
            name,
            by_reference: false,
            mutable: false,
        }),
    ));
    let capture_list = capture
        .separated_by(just(Token::Comma))
        .at_least(1)
        .allow_trailing()
        .collect::<Vec<_>>()
        .delimited_by(just(Token::LBracket), just(Token::RBracket));
    let closure_tail = closure_params
        .then(just(Token::Arrow).ignore_then(ty.clone()).or_not())
        .then(block.clone());
    let captured_closure = capture_list.then(closure_tail.clone()).map_with(
        |(captures, ((params, return_type), body)), e| {
            Node::new(
                ExprKind::Closure {
                    captures,
                    params,
                    return_type,
                    body,
                },
                span(e.span()),
            )
        },
    );
    let capture_free_closure = closure_tail.map_with(|((params, return_type), body), e| {
        Node::new(
            ExprKind::Closure {
                captures: Vec::new(),
                params,
                return_type,
                body,
            },
            span(e.span()),
        )
    });

    let match_body = choice((
        block.clone().map(MatchBody::Block),
        expr.clone().map(MatchBody::Expr),
    ));
    let match_arm = pattern
        .clone()
        .then(just(Token::When).ignore_then(expr.clone()).or_not())
        .then_ignore(just(Token::FatArrow))
        .then(match_body)
        .then_ignore(choice((just(Token::Comma), just(Token::Semicolon))).or_not())
        .map(|((pattern, guard), body)| MatchArm {
            pattern,
            guard,
            body,
        });
    let match_expr = just(Token::Match)
        .ignore_then(
            expr.clone()
                .delimited_by(just(Token::LParen), just(Token::RParen)),
        )
        .then(
            match_arm
                .repeated()
                .collect::<Vec<_>>()
                .delimited_by(just(Token::LBrace), just(Token::RBrace)),
        )
        .map_with(|(value, arms), e| {
            Node::new(
                ExprKind::Match {
                    value: Box::new(value),
                    arms,
                },
                span(e.span()),
            )
        });

    let context_expr = just(Token::Context)
        .ignore_then(just(Token::Dot))
        .ignore_then(ident())
        .map_with(|name, e| Node::new(ExprKind::Context { name }, span(e.span())));
    let parenthesized = expr
        .clone()
        .delimited_by(just(Token::LParen), just(Token::RParen));
    let atom = choice((
        match_expr,
        context_expr,
        reader_expr,
        captured_closure,
        capture_free_closure,
        struct_init,
        qualified_expr,
        literal_expr,
        none_expr,
        some_expr,
        result_expr,
        keyword_expr,
        array_expr,
        path_expr,
        parenthesized,
    ))
    .labelled("expression atom")
    .boxed();
